--- a/public/posts/web-architecture-goals.mdx
+++ b/public/posts/web-architecture-goals.mdx
@@ -70,7 +70,7 @@ This blog's posts and the accompanying code samples explain OAuth features and d
 | Stage | Description |
 | ----- | ----------- |
 | <a href='basicspa-overview.mdx'>Basics</a> | Getting an SPA, API and authorization server working together, with a developer friendly setup. |
-| <a href='improved-spa-code-sample-overview.mdx'>Updated</a> | SPA session management for a complete user experience, and flexible API authorization to protect data. |
+| <a href='improved-spa-code-sample-overview.mdx'>Updated</a> | SPA session management for a complete application lifecycle, and flexible API authorization to protect data. |
 | <a href='final-spa-overview.mdx'>Final</a> | A security hardened SPA that runs from a content delivery network and interacts with cloud deployed APIs. |
 
 ### Where Are We?
