Fix grammatical errors in cloud-native updates content
Corrected phrasing for clarity and grammatical accuracy in the content.

--- a/public/posts/cloud--native-updates.mdx
+++ b/public/posts/cloud--native-updates.mdx
@@ -26,7 +26,7 @@ You can learn much more about combining OAuth and cloud native in the O'Reilly b
 - [Cloud Native Data Security with OAuth](https://www.oreilly.com/library/view/cloud-native-data/9781098164874/)
 - [Book Code Examples](https://github.com/curityio/cloud-native-oauth-security-examples)
 
-You can then many deeper requirements on the API side of the architecture, like the following essential security features:
+You can implement many deeper requirements on the API side of the architecture, like the following essential security features:
 
 - Platform features like workload identities, to enable secure connections with short-lived credentials.
 - An authorization server that provides up-to-date security features for APIs and clients.
@@ -43,7 +43,7 @@ I can deploy all of the final APIs that I developed for this blog on Kubernetes,
 - [Managed Kubernetes Deployment using AWS Elastic Kubernetes Service (EKS)](https://github.com/gary-archer/oauth.cloudnative.eks)
 - [On-Premise Kubernetes Deployment using KUBEADM](https://github.com/gary-archer/oauth.cloudnative.kubeadm)
 
-An organization that follows this approach can keep its options open and plan many types of deployment, including multi-cloud. It can also use local clusters for some types of development and test environments, to save costs.
+An organization that follows this approach can keep its options open and plan many types of deployments, including multi-cloud. It can also use local clusters for some types of development and test environments, to save costs.
 
 ### Where Are We?
 
