--- a/public/posts/android-coding-key-points.mdx
+++ b/public/posts/android-coding-key-points.mdx
@@ -22,7 +22,7 @@ The view objects initiate calls to OAuth secured APIs, which can lead to login r
 
 I created the project with the below *Empty Activity* template, after which I began developing Kotlin classes:
 
-![project creation](../images/530/project-creation.jpg)
+![project creation](../images/530/project-creation.jpg?v=20251026)
 
 I configured the following options to the application's *build.gradle.kts* file, to enable views that use the newer *Jetpack Compose* syntax, which I find easier to maintain than older XML layout views:
 
