--- a/public/posts/basicandroidapp-execution.mdx
+++ b/public/posts/basicandroidapp-execution.mdx
@@ -42,32 +42,32 @@ Use the browser's password autofill prompt to save the password, then navigate b
 
 ### Step 4: View Library Dependencies
 
-View the app's *libs.versions.toml* [Version Catalog File](https://docs.gradle.org/current/userguide/version_catalogs.html) to understand the Single Activity App's third party dependencies, which include the AppAuth Library. The app requires Android 8 (SDK 26) and above, since this simplifies some areas of the Android implementation.
+View the app's *libs.versions.toml* [Version Catalog File](https://docs.gradle.org/current/userguide/version_catalogs.html) to understand the Single Activity App's third party dependencies, which include the AppAuth Library. The app requires Android 10 (SDK 29) and above, since this simplifies some areas of the Android implementation.
 
 ```markdown
 [versions]
-application = "8.8.1"
-kotlin = "2.1.10"
-compose = "2.1.10"
-detekt = "1.23.7"
-core-ktx = "1.15.0"
-activity-compose = "1.10.0"
-compose-bom = "2025.02.00"
-navigation = "2.8.7"
-compose-ui = "1.7.8"
-material3 = "1.3.1"
+application = "8.13.0"
+kotlin = "2.2.21"
+compose = "2.2.21"
+detekt = "2.0.0-alpha.1"
+core-ktx = "1.17.0"
+activity-compose = "1.11.0"
+compose-bom = "2025.10.01"
+navigation = "2.9.5"
+compose-ui = "1.9.4"
+material3 = "1.4.0"
 appauth = "0.11.1"
-browser = "1.8.0"
-okhttp = "4.12.0"
-gson = "2.11.0"
-okio = "3.9.0"
+browser = "1.9.0"
+okhttp = "5.2.1"
+gson = "2.13.2"
+okio = "3.16.2"
 eventbus = "3.3.1"
 
 [plugins]
 application = { id = "com.android.application", version.ref = "application" }
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "compose" }
-detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+detekt = { id = "dev.detekt", version.ref = "detekt" }
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -84,7 +84,7 @@ okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhtt
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 okio = { group = "com.squareup.okio", name = "okio", version.ref = "okio" }
 eventbus = { group = "org.greenrobot", name = "eventbus", version.ref = "eventbus" }
-detekt-formatting = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
+detekt-rules-ktlint-wrapper = { group = "dev.detekt", name = "detekt-rules-ktlint-wrapper", version.ref = "detekt" }
 ```
 
 ### Step 5: View the Single Activity Configuration
