--- a/public/posts/cloud--native-updates.mdx
+++ b/public/posts/cloud--native-updates.mdx
@@ -35,15 +35,7 @@ You can implement many deeper requirements on the API side of the architecture, 
 
 ### Migrating APIs and Clients to Kubernetes
 
-To optimize your future migration choices, write portable code regardless of technology. In particular, use portable libraries and design patterns for essential foundations like security and logging.
-
-I can deploy all of the final APIs that I developed for this blog on Kubernetes, connect all of the final frontends, then deploy to any cloud or on-premise. I use the following GitHub repositories to run portable Kubernetes example deployments:
-
-- [Local Kubernetes Deployment using KIND](https://github.com/gary-archer/oauth.cloudnative.kind)
-- [Managed Kubernetes Deployment using AWS Elastic Kubernetes Service (EKS)](https://github.com/gary-archer/oauth.cloudnative.eks)
-- [On-Premise Kubernetes Deployment using KUBEADM](https://github.com/gary-archer/oauth.cloudnative.kubeadm)
-
-An organization that follows this approach can keep its options open and plan many types of deployments, including multi-cloud. It can also use local clusters for some types of development and test environments, to save costs.
+To optimize your future migration choices, write portable code regardless of technology. I can deploy all of the final APIs that I developed for this blog on Kubernetes, connect all of the final frontends, then deploy to any cloud or on-premise. An organization that follows this approach can keep its options open and plan many types of deployments, including multi-cloud. It can also use local clusters for some types of development and test environments, to save costs.
 
 ### Where Are We?
 
