--- a/public/posts/cloud--native-updates.mdx
+++ b/public/posts/cloud--native-updates.mdx
@@ -15,7 +15,7 @@ Having used a variety of deployments, I prefer the following default mix for the
 | Web Architecture | Cloud Content Delivery Network |
 | API Architecture | Cloud Kubernetes Platform |
 
-These days, cloud platforms enable you to run Kubernetes clusters without needing to perform the lower level work. For example, managed solutions deal with control plane high availability and keeping Kubernetes nodes up to date. You then use cloud networking, disk storage and compute resources and only need to operate on application level YAML resources.
+These days you can often run Kubernetes clusters without needing to perform the lower level work. For example, managed solutions deal with control plane high availability and keeping Kubernetes nodes up to date. You then use cloud networking, disk storage and compute resources and only need to operate on application level YAML resources.
 
 ### OAuth in Kubernetes
 
