--- a/public/posts/cloud--native-updates.mdx
+++ b/public/posts/cloud--native-updates.mdx
@@ -29,7 +29,7 @@ You can learn much more about combining OAuth and cloud native in the O'Reilly b
 You can implement many deeper requirements on the API side of the architecture, like the following essential security features:
 
 - Platform features like workload identities, to enable secure connections with short-lived credentials.
-- An authorization server that provides up-to-date security features for APIs and clients.
+- An authorization server that supports many up-to-date security behaviours for APIs and clients.
 - An API gateway that supports plugins to enable token translations.
 - A logging system with rich visualization and querying features for monitoring security events.
 
